# vulnpilot

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample-report.html  sample-report.md
tests/: test_models.py  test_orchestrator.py  test_report.py  test_scope.py
vulnpilot/: __init__.py  cli.py  config.py  llm.py  models.py  orchestrator.py  report.py  scope.py
vulnpilot/tools/: __init__.py  base.py  http_probe.py  nuclei.py  subfinder.py  tls_probe.py
