[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vulnpilot"
version = "0.1.0"
description = "AI-orchestrated web application security scanner"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yavuz Canpolat" }]
keywords = ["security", "pentesting", "scanner", "ai", "web-security", "appsec"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
ai = ["anthropic>=0.39"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6"]

[project.scripts]
vulnpilot = "vulnpilot.cli:main"

[project.urls]
Homepage = "https://github.com/yavuzscnplt/vulnpilot"
Repository = "https://github.com/yavuzscnplt/vulnpilot"
Issues = "https://github.com/yavuzscnplt/vulnpilot/issues"

[tool.hatch.build.targets.wheel]
packages = ["vulnpilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Typer'ın önerdiği desen: Option/Argument çağrısını argüman varsayılanında
# yapmak (B008) ve konsol UTF-8 sabitlemesinden sonra gelen importlar (E402).
"vulnpilot/cli.py" = ["B008", "E402"]
